Adjusted width of block-pagestyle-form (I'm trying to stop the word "Standard" from wrapping within the dropdown menu - bear with me please).

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -29,7 +29,7 @@
 	margin: 10px 10px 10px 0;
 	position: absolute;
 	top: 5px;
-  width: 70%;	
+  width: 120%;	
 
 }
 /*** 605+ ***/
